  - EPTCS as session "Demo_EPTCS" / doc "demo_eptcs"
  - FoilTeX as session "Demo_FoilTeX" / doc "demo_foiltex"
  - Dagstuhl LIPIcs style as session "Demo_LIPIcs" / doc "demo_lipics"
  - Springer LaTeX LNCS style as session "Demo_LLNCS" / doc "demo_llncs"

* Support for interactive document preparation in PIDE, notably via the
Isabelle/jEdit Document panel.


*** HOL ***

* Theory "HOL.Fun":
  - Renamed lemma inj_on_strict_subset to image_strict_mono.
    Minor INCOMPATIBILITY.

* Theory "HOL.Relation":
  - Added predicates irrefl_on and irreflp_on and redefined irrefl and
    irreflp to be abbreviations. Lemmas irrefl_def and irreflp_def are
    explicitly provided for backward compatibility but their usage is
    discouraged. Minor INCOMPATIBILITY.
  - Added predicates sym_on and symp_on and redefined sym and
    symp to be abbreviations. Lemmas sym_def and symp_def are explicitly
    provided for backward compatibility but their usage is discouraged.
    Minor INCOMPATIBILITY.
  - Added predicates asym_on and asymp_on and redefined asym and
    asymp to be abbreviations. INCOMPATIBILITY.
  - Added predicates antisym_on and antisymp_on and redefined antisym and
    antisymp to be abbreviations. Lemmas antisym_def and antisymp_def are
    explicitly provided for backward compatibility but their usage is
    discouraged. Minor INCOMPATIBILITY.
  - Added predicates trans_on and transp_on and redefined trans and transp to
    be abbreviations. Lemmas trans_def and transp_def are explicitly provided
    for backward compatibility but their usage is discouraged.
    Minor INCOMPATIBILITY.
  - Strengthened (and renamed) lemmas. Minor INCOMPATIBILITY.
      antisym_converse[simp] ~> antisym_on_converse[simp]
      order.antisymp_ge[simp] ~> order.antisymp_on_ge[simp]
      order.antisymp_le[simp] ~> order.antisymp_on_le[simp]
      preorder.asymp_greater[simp] ~> preorder.asymp_on_greater[simp]
      preorder.asymp_less[simp] ~> preorder.asymp_on_less[simp]